--- a/hrms_project/attendance/templates/attendance/shifts/ramadan_periods.html
+++ b/hrms_project/attendance/templates/attendance/shifts/ramadan_periods.html
@@ -84,7 +84,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" onclick="ramadanManager.savePeriod()">Save</button>
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
     </div>
@@ -123,7 +123,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" onclick="ramadanManager.updatePeriod()">Update</button>
+                <button type="button" class="btn btn-primary">Update</button>
             </div>
         </div>
     </div>
