--- a/hrms_project/attendance/templates/attendance/attendance_report.html
+++ b/hrms_project/attendance/templates/attendance/attendance_report.html
@@ -1,21 +1,16 @@
-{% extends 'attendance/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'attendance/css/reports.css' %}">
 {% endblock %}
 
-{% block attendance_content %}
+{% block content %}
 <div class="card">
     <div class="card-header d-flex justify-content-between align-items-center">
         <h5 class="card-title mb-0">
             <i class="fas fa-chart-bar"></i> Attendance Reports
         </h5>
-        <div class="btn-group">
-            <button class="btn btn-outline-secondary btn-export" data-bs-toggle="tooltip" title="Print Report" onclick="window.print()">
-                <i class="fas fa-print"></i> Print
-            </button>
-        </div>
     </div>
     <div class="card-body">
         <!-- Filters -->
@@ -98,6 +93,11 @@
             </div>
         </div>
 
+        <!-- Holiday Information -->
+        <div id="holidayInfo" style="display: none;">
+            <!-- Holiday information will be populated by JavaScript -->
+        </div>
+
         <!-- Report Content -->
         <div class="report-content">
             <!-- Summary Cards -->
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card bg-warning text-white">
+                    <div class="card bg-warning text-dark">
                         <div class="card-body">
                             <h6 class="card-title">Late</h6>
                             <h3 class="card-text" id="lateCount">-</h3>
@@ -196,7 +196,7 @@
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="errorToast">
         <div class="toast-header bg-danger text-white">
             <strong class="me-auto">Error</strong>
-            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
         <div class="toast-body" id="errorMessage">
         </div>
@@ -205,7 +205,6 @@
 {% endblock %}
 
 {% block extra_js %}
-{{ block.super }}
 <!-- Chart.js -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <!-- Custom report JS -->
