--- a/hrms_project/attendance/templates/attendance/attendance_list.html
+++ b/hrms_project/attendance/templates/attendance/attendance_list.html
@@ -136,11 +136,11 @@
 
         <!-- Attendance Table -->
         <div class="table-responsive">
-            <table class="table table-striped table-hover" id="attendance-table">
+            <table class="table table-hover">
                 <thead>
                     <tr>
                         <th>Personnel ID</th>
-                        <th>Name</th>
+                        <th>Employee Name</th>
                         <th>Department</th>
                         <th>Date</th>
                         <th>First In</th>
